--- a/kdatahack/templates/base.html
+++ b/kdatahack/templates/base.html
@@ -1,4 +1,6 @@
 {% load staticfiles %}
+{% load js %}
+{% load eztables %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -33,6 +35,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="{% static 'kdatahack/libs/jquery/jquery.cookie.js' %}" type="text/javascript"></script>
+    {% django_js %}
+    <script type="text/javascript" language="javascript" src="{% static 'kdatahack/libs/datatables/legacy/js/jquery.dataTables.min.js' %}"></script>
 
     <!-- keep this at the bottom -->
     <script src="{% static 'kdatahack/js/plugins.js' %}" type="text/javascript"></script>
