WIP Created datatable for MasterItem and connected it to the template

--- a/kdatahack/templates/dashboard/research_list_modal.html
+++ b/kdatahack/templates/dashboard/research_list_modal.html
@@ -6,12 +6,12 @@
                 <h4 class="modal-title">Add new item to your research</h4>
             </div>
             <div class="modal-body">
-                <p>One fine body&hellip;</p>
                 <div class="row" style="overflow-x: auto;">
                     <div class"col-xs-12">
-                        <table class="table table-stripped">
+                        <table id="research-masteritem-dt-modal" class="table table-stripped">
                             <thead>
                                 <tr>
+                                    <th>Id</th>
                                     <th>Item</th>
                                     <th>Description</th>
                                     <th>UOM</th>
