--- a/kdatahack/templates/dashboard/research_list_modal.html
+++ b/kdatahack/templates/dashboard/research_list_modal.html
@@ -28,8 +28,9 @@
                     class="btn btn-default"
                     data-dismiss="modal">Close</button>
                 <button type="button"
-                    class="btn
-                    btn-primary">Add</button>
+                    id="research-btn-add-item"
+                    class="btn btn-primary"
+                >Add</button>
             </div>
         </div><!--/.modal-content-->
     </div><!--/.modal-dialog-->
