--- a/kdatahack/templates/dashboard/home.html
+++ b/kdatahack/templates/dashboard/home.html
@@ -5,6 +5,9 @@
 <div class="container" style="text-align:center;">
     <h3>The Department of Silly Walks</h3>
     <h4>is proud to present</h4>
-    <h1><span class="label label-info">The PhilGEPS Shopping List</span></h1>
+    <h1><!-- <span class="label label-info"> -->Market Snitch<!-- </span> --></h1>
+    <a class="btn btn-success" type="button" href={% url "research" %}>
+      Try it now!
+    </a>
 </div>
 {% endblock main %}
