Added team section on homepage

--- a/kdatahack/templates/dashboard/home.html
+++ b/kdatahack/templates/dashboard/home.html
@@ -138,7 +138,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
+                        <img src="{% static "kdatahack/home/img/team/ray.jpg" %}" class="img-responsive img-circle" alt="">
                         <h4>Ray Dino</h4>
                         <p class="text-muted">Software Engineer @ Save22</p>
                         <ul class="list-inline social-buttons">
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
+                        <img src="{% static "kdatahack/home/img/team/matt.jpg" %}" class="img-responsive img-circle" alt="">
                         <h4>Matt Lebrun</h4>
                         <p class="text-muted">Software Engineer at Save22</p>
                         <ul class="list-inline social-buttons">
@@ -168,7 +168,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
+                        <img src="{% static "kdatahack/home/img/team/mickey.jpg" %}" class="img-responsive img-circle" alt="">
                         <h4>Micaela Reyes</h4>
                         <p class="text-muted">Software Engineer at Freelancer.com</p>
                         <ul class="list-inline social-buttons">
