--- a/kdatahack/templates/navigation.html
+++ b/kdatahack/templates/navigation.html
@@ -9,13 +9,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'home' %}">kdatahack</a>
+            <a class="navbar-brand" href="{% url 'home' %}">#KabantayNgBayan - Market Snitch</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-left">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/">Home</a></li>
+<!--                 <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li> -->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user and not user.is_anonymous %}
