--- a/kdatahack/templates/base.html
+++ b/kdatahack/templates/base.html
@@ -14,6 +14,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'kdatahack/img/favicon.ico' %}">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//cdn.datatables.net/1.10.8/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="{% static 'kdatahack/css/styles.css' %}">
     {% block extra_css %}{% endblock %}
 
@@ -31,16 +32,16 @@
     {% block main %}
     {% endblock %}
     <!-- External and third-party js libs -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="{% static 'kdatahack/libs/jquery/jquery.cookie.js' %}" type="text/javascript"></script>
-    <script type="text/javascript" language="javascript" src="{% static 'kdatahack/libs/datatables/legacy/js/jquery.dataTables.min.js' %}"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{% static 'kdatahack/libs/jquery/jquery.cookie.js' %}" type="text/javascript"></script>
+    <script type="text/javascript" src="//cdn.datatables.net/1.10.8/js/jquery.dataTables.min.js"></script>
 
     {% block extra_js %}
     {% endblock %}
 
     <!-- keep this at the bottom -->
-    <script src="{% static 'kdatahack/js/plugins.js' %}" type="text/javascript"></script>
-    <script src="{% static 'kdatahack/js/scripts.js' %}" type="text/javascript"></script>
+    <script type="text/javascript" src="{% static 'kdatahack/js/plugins.js' %}"></script>
+    <script type="text/javascript" src="{% static 'kdatahack/js/scripts.js' %}"></script>
 </body>
 </html>
